plugins {
    id 'java'
    id 'war' // Gives access to providedCompile()
}

java {
    sourceCompatibility = JavaVersion.VERSION_19
    targetCompatibility = JavaVersion.VERSION_19
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
    }
    test {
        java {
            srcDir 'src/test/java'
        }
    }
}

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

test {
    useJUnitPlatform()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'

    implementation  fileTree(dir: 'lib', include: ['*.jar'])
    providedCompile group: 'org.projectlombok', name: 'lombok', version: '1.16.22'
    implementation  group: 'org.javacord', name: 'javacord', version: '3.0.4'
    implementation  group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.1'
    implementation  group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.10.1'
    implementation  group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.3'
    implementation 'org.reflections:reflections:0.9.11'
    implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
    implementation group: 'org.ahocorasick', name: 'ahocorasick', version: '0.4.0'

}